# ai_energy_use

./: README.md  app.py  data.json  pyproject.toml  requirements.txt
modules/: fuel_efficiency.py  nuclear_supply.py  revenue.py  swu.py  us_demand.py
utils/: calculator.py  workflow_diagram.py
